Browse/Delete event completed

--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -35,8 +35,19 @@
             android:name=".attendee.CustomizeProfile"
             android:exported="false" />
         <!--  ADMIN        -->
-        <activity android:name=".admin.AdminProfileActivity"
+        <activity android:name=".admin.AdminBrowseProfile"
             android:exported="false" />
+        <activity android:name=".admin.AdminDeleteProfile"
+            android:exported="false" />
+        <activity android:name=".admin.AdminBrowseEvent"
+            android:exported="false" />
+        <activity android:name=".admin.AdminDeleteEvent"
+            android:exported="false" />
+        <activity android:name=".admin.AdminBrowseImage"
+            android:exported="false" />
+        <activity android:name=".admin.AdminDeleteImage"
+            android:exported="false" />
+
         <activity
             android:name=".organizer.OrganizerCustomizeProfile">
         </activity>
