--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".attendee.CustomizeProfile"
             android:exported="false" />
         <activity
+            android:name=".organizer.OrganizerCustomizeProfile">
+        </activity>
+        <activity
             android:name=".organizer.OrganizerHome"
             android:exported="false"/>
         <activity
