--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:name=".organizer.OrganizerCustomizeProfile">
         </activity>
         <activity
+            android:name=".organizer.OrganizerEventInfo">
+        </activity>
+        <activity
             android:name=".organizer.OrganizerHome"
             android:exported="false"/>
         <activity
