--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity
             android:name=".attendee.CustomizeProfile"
             android:exported="false" />
+        <activity android:name=".attendee.AttendeeNotification"
+            android:exported="false" />
         <!--  ADMIN        -->
         <activity android:name=".admin.AdminBrowseProfile"
             android:exported="false" />
