--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
             android:exported="false" />
         <activity android:name=".attendee.AttendeeNotification"
             android:exported="false" />
+        <activity android:name=".organizer.OrganizerNotification"
+            android:exported="false" />
+
         <!--  ADMIN        -->
         <activity android:name=".admin.AdminBrowseProfile"
             android:exported="false" />
