fix most of errors related to event

--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -14,9 +14,6 @@
         android:theme="@style/Theme.EVENTAPP"
         tools:targetApi="31">
         <activity
-            android:name=".attendee.AttendEventActivity"
-            android:exported="false" />
-        <activity
             android:name=".admin.AdminActivity"
             android:exported="false" />
         <activity
@@ -25,6 +22,9 @@
         <activity
             android:name=".attendee.AttendeeActivity"
             android:exported="false" />
+        <activity
+            android:name=".attendee.AttendeeEvent"
+            android:exported="false"/>
         <activity
             android:name=".users.UserLogin"
             android:exported="false" />
