--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,9 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: |
+        cd EventApp
+        chmod +x gradlew
 
     - name: Cache Gradle dependencies
       uses: actions/cache@v3
