--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,5 +36,6 @@ jobs:
           ${{ runner.os }}-gradle-
 
     - name: Build with Gradle
-      run: ./gradlew build
-
+      run: |
+        cd EventApp
+        ./gradlew build
