--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,4 +38,5 @@ jobs:
     - name: Build with Gradle
       run: |
         cd EventApp
-        ./gradlew build
+        ./gradlew build -x test
+
