Generate QR Code 1.0

--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -70,6 +70,8 @@
             android:exported="false"/>
         <activity android:name=".organizer.OrganizerEditEventSelection"
             android:exported="false"/>
+        <activity android:name=".organizer.OrganizerQRCode"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
