--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -72,6 +72,8 @@
             android:exported="false"/>
         <activity android:name=".organizer.OrganizerQRCode"
             android:exported="false"/>
+        <activity android:name=".organizer.OrganizerSeeListOfAttendees"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
