--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -80,6 +80,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".attendee.QRCodeScannerActivity"
             android:exported="false"/>
+        <activity android:name=".organizer.UpdateEventFragment"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
