--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -97,6 +97,11 @@
 
     <!-- Camera permission -->
     <uses-permission android:name="android.permission.CAMERA"/>
+    <!-- Gallery permission -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
 
 
 </manifest>
