--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -28,12 +33,7 @@
         <activity
             android:name=".attendee.AttendeeEvent"
             android:exported="false"/>
-        <activity
-            android:name=".users.UserLogin"
-            android:exported="false" />
-        <activity
-            android:name=".users.UserSignUp"
-            android:exported="false" />
+   
         <activity
             android:name=".attendee.CustomizeProfile"
             android:exported="false" />
@@ -96,6 +96,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD2uoBic6LBl3GZrfsuVD-PUfigX9mZlKI" />
     </application>
 
     <!-- Camera permission -->
