Scan QR Code Error

--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
             android:exported="false" />
         <activity android:name=".attendee.AttendeeNotification"
             android:exported="false" />
+        <activity android:name=".attendee.AttendeeNoSignUpEvent"
+            android:exported="false"/>
         <activity android:name=".organizer.OrganizerNotification"
             android:exported="false" />
         <activity android:name=".organizer.NotificationEventListActivity"
@@ -90,6 +92,8 @@
             android:exported="false"/>
         <activity android:name=".organizer.UpdateEventFragment"
             android:exported="false"/>
+        <activity android:name=".organizer.OrganizerQRCode_EventInfo"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
