reuse QR code and scan real-time QR Code

--- a/EventApp/app/src/main/AndroidManifest.xml
+++ b/EventApp/app/src/main/AndroidManifest.xml
@@ -94,6 +94,8 @@
             android:exported="false"/>
         <activity android:name=".organizer.OrganizerQRCode_EventInfo"
             android:exported="false" />
+        <activity android:name=".organizer.QRCodeReuseActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
